2009-12-17  Ulrich Drepper  <drepper@redhat.com>

	* pthread_rwlock_init.c (__pthread_rwlock_init): Simplify code by
	using memset.

2009-12-01  Dinakar Guniguntala  <dino@in.ibm.com>

	* sysdeps/unix/sysv/linux/i386/i486/lowlevellock.h: Define
	FUTEX_WAIT_REQUEUE_PI and FUTEX_CMP_REQUEUE_PI.
	* sysdeps/unix/sysv/linux/i386/i486/pthread_cond_broadcast.S: If mutex
	is a non robust PI mutex, then use FUTEX_CMP_REQUEUE_PI.
	* sysdeps/unix/sysv/linux/i386/i486/pthread_cond_signal.S: Likewise.
	* sysdeps/unix/sysv/linux/i386/i486/pthread_cond_timedwait.S: If mutex
	is a non robust PI mutex, then use FUTEX_WAIT_REQUEUE_PI.
	* sysdeps/unix/sysv/linux/i386/i486/pthread_cond_wait.S: Likewise.

2009-12-12  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/i386/i486/sem_timedwait.S (sem_timedwait):
	Don't update nwaiters after invalid timeout is recognized.

2009-11-27  Thomas Schwinge  <thomas@codesourcery.com>

	* sysdeps/unix/sysv/linux/sh/pt-initfini.c (_init): Don't call
	__gmon_start__.

2009-11-27  Andreas Schwab  <schwab@redhat.com>

	* sysdeps/unix/sysv/linux/x86_64/cancellation.S: Reload
	THREAD_SELF->cancelhandling after returning from futex call.

2009-11-24  Ulrich Drepper  <drepper@redhat.com>

	* tst-sem13.c: New file.
	* Makefile (tests): Add tst-sem13.

2009-11-22  Roland McGrath  <roland@redhat.com>

	* sysdeps/unix/sysv/linux/i386/dl-sysdep.h: # include "i686/dl-sysdep.h"
	instead of recapitulating its contents.

2009-11-18  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/i386/i486/pthread_cond_broadcast.S: Minor
	optimizations and cleanups.

2009-11-18  Dinakar Guniguntala  <dino@in.ibm.com>

	* sysdeps/unix/sysv/linux/i386/i486/pthread_cond_broadcast.S:
	Remove redundant code. Fix cfi offsets.
	* sysdeps/unix/sysv/linux/i386/i486/pthread_cond_signal.S:
	Fix cfi offsets.

2009-11-17  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/x86_64/pthread_cond_timedwait.S: Minimally
	reduce size of unwind info.
